feat: add methods to view states