@@ -2,6 +2,7 @@ package it.polimi.ingsw.view.stateMachine;
 
 import it.polimi.ingsw.view.Action;
 import it.polimi.ingsw.view.Actions.GoTo;
+import it.polimi.ingsw.view.Actions.JoinGame;
 import it.polimi.ingsw.view.Actions.Peek;
 import it.polimi.ingsw.view.Actions.SelectCardFace;
 import it.polimi.ingsw.view.View;
@@ -11,8 +12,8 @@ import java.util.Arrays;
 import java.util.List;
 
 public class CreateGameState extends ViewState{
-    static final List<Action> actions = Arrays.asList(new GoTo(), new Peek());
-    static final List<Visualization> visualizations = Arrays.asList(Visualization.SHOW_START_CARD, Visualization.SHOW_CODEX, Visualization.SHOW_DECK, Visualization.PEEK_FORM);
+    static final List<Action> actions = List.of(new GoTo(), new JoinGame());
+    static final List<Visualization> visualizations = List.of(Visualization.CREATE_GAME_FORM);
     public static void run(View view) {
         view.clearVisualizations();
         view.clearActions();
